--- a/css files/main.css
+++ b/css files/main.css
@@ -18,7 +18,7 @@ header {
   background-color: #211cb4;
   color: azure;
   align-items: center;
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
 }
 
 header a {
@@ -202,6 +202,11 @@ form button {
   color: white;
   border-radius: 5px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #2f2ac7;
 }
 
 form label {
@@ -279,113 +284,35 @@ form label {
   font-weight: 600;
   font-size: 16px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
+  display: none;
 }
 #close-btn {
   border: none;
   background: none;
   display: none;
 }
-@media screen and (max-width: 700px) {
-  body {
-    height: 100vh;
-  }
-  .main-section {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  .input-section {
-    display: flex;
-    flex-direction: column-reverse;
-    height: 90vh;
-    gap: 15px;
-    height: 100%;
-  }
-  .transactions-section {
-    position: fixed;
-    width: 100%;
-    background-color: white;
-    top: 0;
-    right: -100%;
-    box-shadow: none;
-    border-radius: 0;
-    height: 100vh;
-  }
-  .transaction-btn {
-    display: block;
-  }
 
-  .transactions-section h4 {
-    background: none;
-    color: #211cb4;
-    font-size: 20px;
-  }
-  .transactions-section p,
-  .transactions-section span {
-    font-size: 14px;
-  }
-  #close-btn {
-    display: block;
-    align-self: flex-start;
-  }
-  .show {
-    right: 0;
-    transition: right 0.5s ease-out;
-  }
+.reset-button {
+  /* width: 10%; */
+  padding: 10px 35px;
+  color: white;
+  background-color: red;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-  .current-balance {
-    order: 1;
-    height: 200px;
-    border-radius: 5px;
-    padding: 5%;
-    flex-direction: column;
-    gap: 20px;
-  }
-  .current-balance div {
-    flex-direction: column;
-  }
+.reset-button:hover {
+  background-color: rgb(217, 22, 22);
+}
 
-  .current-balance h3,
-  .current-balance p {
-    font-size: 30px;
-  }
+.menu-btn {
+  background: none;
+  border: none;
+  display: none;
+}
 
-  .bal-ex {
-    height: 130px;
-    display: flex;
-    flex-direction: column;
-    padding: 1%;
-    gap: 10px;
-    background: none;
-  }
-  .bal-ex h4 {
-    display: none;
-  }
-  .bal,
-  .expenses {
-    display: flex;
-    height: 50%;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
-    gap: 10px;
-  }
-
-  .expenses div,
-  .bal div {
-    flex: 1;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    font: 600;
-    border-radius: 30px;
-  }
-  .t-box:hover .time-box {
-  }
-  .time-box {
-    padding-top: 5px;
-  }
-  .time-box p {
-    font-size: 12px;
-  }
+.close-button {
+  display: none;
 }
