--- a/css files/about.css
+++ b/css files/about.css
@@ -12,7 +12,8 @@ header {
   width: 100%;
   height: 70px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 4%;
   /* background-color: blue; */
   background-color: #211cb4;
   color: azure;
@@ -38,8 +39,7 @@ nav a {
 /* styling the text container */
 .main-sectionA {
   height: 300px;
-  width: 90%;
-  margin: 5% auto;
+  width: 100%;
   color: white;
   display: flex;
 }
@@ -52,9 +52,12 @@ h1 {
 
 .img-container {
   flex-basis: 30%;
+  text-align: center;
 }
 .text-container {
   flex-basis: 70%;
+  text-align: justify;
+  padding: 0 3%;
 }
 
 .img-container > img {
@@ -94,5 +97,14 @@ strong {
     display: block;
     background: none;
     border: none;
+  }
+  footer {
+    position: static;
+  }
+  .text-container {
+    padding: 0 8%;
+  }
+  header {
+    padding: 0 8%;
   }
 }
