--- a/css files/index.css
+++ b/css files/index.css
@@ -12,7 +12,8 @@ header {
   width: 100%;
   height: 70px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 8%;
   /* background-color: blue; */
   background-color: #211cb4;
   color: azure;
@@ -37,37 +38,39 @@ nav a {
 
 /* styling the container */
 main {
+  padding: 0 8%;
   height: 20vh;
   text-align: center;
 }
 main > h2 {
   color: white;
-  font-size: 40px;
+  font-size: 2.3rem;
   margin-top: 20px;
 }
 
 .bottom-text {
   color: #e3bf0e;
-  font-size: 25px;
+  font-size: 21px;
   margin-top: 10px;
   font-weight: 600;
   text-align: center;
 }
 section {
-  height: 50vh;
+  padding: 0 8%;
+  height: 45vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .container {
-  width: 40%;
+  width: 60%;
   height: 90%;
-  background-color: #d2e9f8;
-  background-color: #e3bf0e;
   background: linear-gradient(to top left, #d2e9f8, #e3bf0e, #e3bf0e, #d2e9f8);
   border-radius: 20px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   align-items: center;
   justify-content: center;
   animation: floatBox 3s ease-in-out infinite;
@@ -83,26 +86,15 @@ section {
     transform: translateY(0);
   }
 }
-.budget-box {
-  margin-top: 30px;
-  height: 70%;
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  gap: 20px;
-}
-.budget-box p {
-  font-size: 23px;
+.home-text {
+  font-size: 1.5rem;
   color: aliceblue;
   font-weight: 600;
   letter-spacing: 2px;
 }
-
-.budget-box div {
+.container div {
   text-align: center;
 }
-
 .home-start {
   padding: 15px 50px;
   border-radius: 10px;
@@ -119,19 +111,38 @@ section {
   text-decoration: none;
   color: #211cb4;
 }
+/* footer */
+footer {
+  background-color: #231f89;
+  color: #fff;
+  text-align: center;
+  padding: 20px 10px;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+footer p {
+  margin: 10px 0 0;
+  font-size: 1rem;
+}
 
 @media screen and (max-width: 700px) {
   body {
     height: 100vh;
   }
   .container {
-    width: 90%;
+    width: 100%;
     height: 50%;
     margin-top: 2%;
   }
 
   main {
     height: 15vh;
+  }
+  main > h2 {
+    font-size: 2rem;
   }
   nav .close-button {
     background: none;
@@ -154,7 +165,8 @@ section {
     position: fixed;
     top: -100%;
     width: 100%;
-    height: 70%;
+    left: 0;
+    height: 90%;
     background: #211cb4;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
     padding: 10%;
@@ -169,9 +181,15 @@ section {
     background: none;
     border: none;
   }
-}
+  .home-text {
+    font-size: 1.2rem;
+    color: aliceblue;
+    font-weight: 600;
+    letter-spacing: 2px;
+  }
 
-.menu-text {
-  display: none;
-  width: 100%;
+  footer p {
+    margin: 10px 0 0;
+    font-size: 0.8rem;
+  }
 }
