--- a/css files/mobile.css
+++ b/css files/mobile.css
@@ -3,7 +3,8 @@
     height: 100vh;
   }
   header {
-    height: 80px;
+    margin-bottom: 30px;
+    padding: 0 8%;
   }
   .main-section {
     display: flex;
@@ -43,6 +44,8 @@
   #close-btn {
     display: block;
     align-self: flex-start;
+    font-size: 30px;
+    margin: 10px;
   }
   .show {
     right: 0;
@@ -117,12 +120,14 @@
   ul li {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
     padding: 15px;
+    border-radius: 15px;
   }
   nav {
     position: fixed;
     top: -100%;
     width: 100%;
-    height: 80%;
+    left: 0;
+    height: 100%;
     z-index: 1000;
     background: #211cb4;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
@@ -134,8 +139,11 @@
     transition: all 0.5s ease-out;
   }
   nav .close-button {
+    margin-bottom: 20px;
     display: block;
     background: none;
     border: none;
+    color: white;
+    font-size: 30px;
   }
 }
